# mapreg

./: .gitignore  setup.cfg
.github/workflows/: publish_on_release.yml
mapreg/: __init__.py  prep_for_registration.py  register_maps.py  symops.py
