[metadata]
name = mapreg
version = 0.1.0
author = Dennis Brookner
author_email = debrookner@gmail.com
description = A python package for aligning non-isomorphous density maps via image registration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
install_requires = 
    numpy
    reciprocalspaceship
    rs-booster
    scikit-image
    tqdm
python_requires = >=3.6

[options.extras_require]
test = 
    pytest

[options.entry_points]
console_scripts =
    mapreg.register = mapreg.register_maps:main
    mapreg.prep = mapreg.prep_for_registration:main